cmake_minimum_required(VERSION 3.20.21)
project(qtcircuit)
if (WIN32)
    #set(CMAKE_C_COMPILER "C:/Qt/Tools/mingw1120_64/bin/gcc.exe")
    set(CMAKE_C_COMPILER "C:/msys64/ucrt64/bin/gcc.exe")
    #set(CMAKE_CXX_COMPILER "C:/Qt/Tools/mingw1120_64/bin/g++.exe")
    set(CMAKE_CXX_COMPILER "C:/msys64/ucrt64/bin/g++.exe")
    project(graphics C CXX)
    #set(CMAKE_MAKE_PROGRAM "C:/Qt/Tools/Ninja/ninja.exe")
    set(CMAKE_MAKE_PROGRAM "C:/msys64/ucrt64/bin/ninja.exe")
    #set(CMAKE_MAKE_PROGRAM "C:/msys64/ucrt64/bin/mingw32-make.exe")
    #set(CMAKE_RC_COMPILER "C:/Qt/Tools/mingw1120_64/bin/windres.exe")
    #set(CMAKE_PREFIX_PATH "C:/Qt/6.5.3/mingw_64")
endif ()
#set(QT_VERSION 7)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
#find_package(QT NAMES Qt6 COMPONENTS Widgets REQUIRED)
find_package(QT NAMES Qt5 COMPONENTS Widgets REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_AUTOMOC ON)
aux_source_directory(${PROJECT_SOURCE_DIR}/ SRC_FILES)
add_executable(${PROJECT_NAME} ${SRC_FILES})
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
target_link_libraries(${PROJECT_NAME} Qt${QT_VERSION_MAJOR}::Widgets)
